--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,17 @@
   color: #61dafb;
 }
 
+.paper{
+  padding: 20px;
+}
+
+.container{
+  background-color: white;
+  border-radius: 8px;
+  margin: 80px 40px;
+  padding: 16px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
