Added features to form component and create UI pages and routes

--- a/src/reuseableComp/formBuilder/formBuilder.style.scss
+++ b/src/reuseableComp/formBuilder/formBuilder.style.scss
@@ -1,16 +1,16 @@
-// .formBuilderWrapper{
+.formBuilderWrapper{
 
     .paper{
         padding: 20px;
     }
       
-    .formControl{
-        margin: 32px auto;
-    }
+    // .formControl{
+    //     margin: 32px auto;
+    // }
       
-    .fieldSet{
-        margin-bottom: 16px;
-    }
+    // .fieldSet{
+    //     margin-bottom: 16px;
+    // }
 
     .form{
         width: 100%;
@@ -18,4 +18,4 @@
         // display: flex;
     }
 
-// }
+}
