Added hooks for userMedia and completed user video access.

--- a/src/components/lobby/lobby.style.scss
+++ b/src/components/lobby/lobby.style.scss
@@ -1,11 +1,15 @@
 
 .lobbyWrapper{
 
+    margin: 32px auto;
+
     .videoFeedWrapper{
+        border: 1px solid black;
 
     }
 
     .meetingInfoWrapper{
+        border: 1px solid black;
         
     }
 
