--- a/src/components/lobby/lobby.style.scss
+++ b/src/components/lobby/lobby.style.scss
@@ -4,12 +4,18 @@
     margin: 32px auto;
 
     .videoFeedWrapper{
-        border: 1px solid black;
+
+        margin: 24px;
+
+        .userVideoStream{
+            width: 100%;
+        }
 
     }
 
     .meetingInfoWrapper{
-        border: 1px solid black;
+        margin: 24px;
+        padding: 40px;
         
     }
 
